--- a/app/assets/stylesheets/invite.scss
+++ b/app/assets/stylesheets/invite.scss
@@ -58,3 +58,16 @@
   width: 20px;
   height: 20px;
 }
+
+.invitable-number{
+  text-align: center;
+  font-size: 20px;
+  font-weight: 700;
+  margin-bottom: 24px;
+  color:#f582ae;
+}
+
+.invitation-link{
+  font-size: 12px;
+  text-decoration: underline;
+}
