--- a/app/views/user/attack_groups/new.html.erb
+++ b/app/views/user/attack_groups/new.html.erb
@@ -11,6 +11,19 @@
       </div>
     <% end %>
 
+    <% props = {
+        listedType: "attack_group",
+        invitableNumber: 999
+      }.to_json
+    %>
+    <div id="select-member" data="<%= props %>">
+        <select-member />
+    </div>
+    <%= javascript_pack_tag 'select_member' %>
+    <%= stylesheet_pack_tag 'select_member' %>
+
+    <%= link_to "アカウントを持っていない人を招待する", new_user_invitation_path, class:"invitation-link" %>
+    <!--
     <div class="lines-on-sides">
       <span>すでにアカウントを持っている人を選択する</span>
     </div>
@@ -32,8 +45,10 @@
           listed_friends: @hosts_friends
         %>
     <% end %>
+    -->
   </div>
 
+  <!--
   <div class="single-page">
     <div class="lines-on-sides">
       <span>アカウントを持っていない人を招待する</span>
@@ -46,4 +61,5 @@
       <%= render "shared/register_invite" %>
     </div>
   </div>
+  -->
 </div>
