--- a/app/views/shared/top/_profile.html.erb
+++ b/app/views/shared/top/_profile.html.erb
@@ -24,7 +24,7 @@
     </div>
 
     <div class="top__select-btn-wrapper">
-      <button class="top__select-btn post-create-btn hover-opacity">
+      <button class="top__select-btn post-create-btn hover-opacity hover-scale">
         <%= link_to "📝 募集作成", new_post_path, class:"top__select-link" %>
       </button>
     </div>
