--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -34,6 +34,7 @@ input[type=text],input[type=password],input[type=email],input[type=submit],selec
   -webkit-appearance: none;
 }
 
+// テキスト省略
 .text-ellipsis{
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -44,6 +45,7 @@ input[type=text],input[type=password],input[type=email],input[type=submit],selec
   opacity: .7;
 }
 
+// 縮小する
 .hover-scale:hover{
   transition: .5s;
   -webkit-transform: scale(0.94);
