--- a/app/assets/stylesheets/session.scss
+++ b/app/assets/stylesheets/session.scss
@@ -2,7 +2,8 @@
   padding: 25px;
   background: #fff;
   border-radius: 8px;
-  margin: 12px 8px 0px 8px;
+  margin: 12px 12px 0px 12px;
+  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
 }
 
 .single-page > h1{
