--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -33,9 +33,10 @@
 .post-listed__popper-title{
   font-weight: 700;
   font-size: 20px;
+  margin-bottom: 8px;
 }
 
 .post-listed__popper-text{
-  font-size: 14px;
+  font-size: 12px;
   color: #6f7372;
 }
