--- a/app/views/shared/_head.html.erb
+++ b/app/views/shared/_head.html.erb
@@ -17,6 +17,9 @@
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
 
+<!-- Font Awesome -->
+<script src="https://kit.fontawesome.com/1f1a5d1702.js" crossorigin="anonymous"></script>
+
 <!-- App favicon -->
 <link rel="apple-touch-icon" sizes="57x57" href="/favicon/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="/favicon/apple-icon-60x60.png">
