--- a/app/assets/stylesheets/btn.scss
+++ b/app/assets/stylesheets/btn.scss
@@ -21,3 +21,14 @@
     opacity: .7;
   }
 }
+
+//招待キャンセル系
+.invite-cancel-img{
+  width: 18px;
+}
+
+.invite-cancel-link{
+  display: flex;
+  align-items: center;
+  margin-right: 6px;
+}
