--- a/app/views/user/post_members/new.html.erb
+++ b/app/views/user/post_members/new.html.erb
@@ -57,6 +57,15 @@
     -->
   </div>
 
+  <div class="page-link-wrapper">
+    <%= link_to new_post_path, class:"page-link-left hover-opacity" do %>
+      <div>
+        <i class="fas fa-chevron-circle-left"></i>
+      </div>
+      <span class="page-link-text-left">募集をみる</span>
+    <% end %>
+  </div>
+
   <!--
   <div class="single-page">
     <div class="lines-on-sides">
