--- a/app/views/user/post_members/new.html.erb
+++ b/app/views/user/post_members/new.html.erb
@@ -62,7 +62,7 @@
       <div>
         <i class="fas fa-chevron-circle-left"></i>
       </div>
-      <span class="page-link-text-left">募集をみる</span>
+      <span class="page-link-text-left">自分の募集をみる</span>
     <% end %>
   </div>
 
