--- a/app/assets/stylesheets/btn.scss
+++ b/app/assets/stylesheets/btn.scss
@@ -22,11 +22,7 @@
   }
 }
 
-//招待キャンセル系
-.invite-cancel-img{
-  width: 18px;
-}
-
+//招待キャンセル
 .invite-cancel-link{
   display: flex;
   align-items: center;
