--- a/app/assets/stylesheets/public/components/btn.scss
+++ b/app/assets/stylesheets/public/components/btn.scss
@@ -7,6 +7,13 @@
   font-weight: 700;
 }
 
+.team-create-btn{
+  // background: #8bd3dd;  
+  border: 1px solid #8bd3dd;
+  color: #8bd3dd;
+  cursor: pointer;
+}
+
 .modal-select-disabled-btn{
   border: 1px solid #a09f9e;
   color: #a09f9e;
