--- a/app/assets/stylesheets/public/components/btn.scss
+++ b/app/assets/stylesheets/public/components/btn.scss
@@ -14,6 +14,11 @@
   cursor: pointer;
 }
 
+.modal-select-link{
+  display: inline-block;
+  width: 100%;
+}
+
 .modal-select-disabled-btn{
   border: 1px solid #a09f9e;
   color: #a09f9e;
