--- a/app/views/user/post_members/edit.html.erb
+++ b/app/views/user/post_members/edit.html.erb
@@ -37,7 +37,7 @@
         <div class="form">
           <div class="field">
             <%= f.radio_button :status, :attend %>
-            <%= f.label :status_attend, "参加希望" %>
+            <%= f.label :status_attend, "参加" %>
             <%= f.radio_button :status, :absent %>
             <%= f.label :status_absent, "不参加" %>
           </div>
