--- a/app/assets/stylesheets/public/components/header.scss
+++ b/app/assets/stylesheets/public/components/header.scss
@@ -29,6 +29,21 @@ header > .container{
   align-items: center;
 }
 
+.header-btn-wrapper{
+  position: relative;
+  margin-right: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.header-btn-title{
+  font-size: 8px;
+  margin-top: 2px;
+}
+
 .drawer-hamburger{
   position: unset!important;
   z-index: 1!important;
