--- a/app/assets/stylesheets/public/components/header.scss
+++ b/app/assets/stylesheets/public/components/header.scss
@@ -44,6 +44,7 @@ header > .container{
   margin-top: 2px;
 }
 
+// ハンバーガーメニュー
 .drawer-hamburger{
   position: unset!important;
   z-index: 1!important;
