--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -9,6 +9,12 @@
     <div class="header-right">
 
       <% if current_user %>
+        <div id="menu">
+            <header-menu />
+        </div>
+        <%= javascript_pack_tag 'menu' %>
+        <%= stylesheet_pack_tag 'menu' %>
+
         <div id="search">
             <search />
         </div>
