--- a/app/views/user/post_members/new.html.erb
+++ b/app/views/user/post_members/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="single-page">
     <h1>
-      <%= @sex %>メンバーを招待する
+      <%= user_sex %>メンバーを招待する
     </h1>
 
     <p class="invitable-number">
