ヘッダー置き換え

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <%= render 'shared/head' %>
   </head>
 
-  <body class="drawer drawer--right">
+  <body>
     <%= render "shared/header" %>
     <% if flash.any? %>
       <% flash.each do |key, value| %>
