--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -1,10 +1,12 @@
 .container{
   width: 100%;
+  height: 100%;
   max-width: 600px;
   margin: 0 auto;
 }
 
 .top{
+  height: 100%;
   margin: 0px 12px;
 }
 
