lineログイン sexモーダル

--- a/app/assets/stylesheets/public/components/form.scss
+++ b/app/assets/stylesheets/public/components/form.scss
@@ -100,7 +100,9 @@
 }
 
 .button-wrapper{
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .app-button{
