--- a/app/views/user/rooms/show.html.erb
+++ b/app/views/user/rooms/show.html.erb
@@ -1,17 +1,12 @@
-<% props = {
-    currentUserId: current_user.id
-}.to_json
-%>
-
 <div class="container">
     <% if Rails.env == "production" %>
-        <div id="rooms" data="<%= props %>">
+        <div id="rooms">
             <rooms />
         </div>
         <%= javascript_pack_tag 'rooms' %>
         <%= stylesheet_pack_tag 'rooms' %>
     <% else %>
-        <div id="rooms" data="<%= props %>">
+        <div id="rooms">
             <rooms />
         </div>
         <%= javascript_pack_tag 'local_rooms' %>
