--- a/app/assets/stylesheets/public/components/rooms.scss
+++ b/app/assets/stylesheets/public/components/rooms.scss
@@ -28,8 +28,7 @@
   position: relative;
 }
 
-.rooms-header{
-  background-color: #fff;
+.rooms-header, .room-header{
   height: 50px;
   display: flex;
   align-items: center;
