--- a/app/assets/stylesheets/public/components/rooms.scss
+++ b/app/assets/stylesheets/public/components/rooms.scss
@@ -13,7 +13,6 @@
     }
   }
 }
-
 // チャットページでチャットメッセージ一覧が表示されている場合のCSS
 .room-window--show{
   .rooms{
@@ -23,6 +22,7 @@
     display: block;
   }
 }
+////////////////////////////////////////////////
 
 .rooms{
   position: relative;
