--- a/app/assets/stylesheets/public/components/rooms.scss
+++ b/app/assets/stylesheets/public/components/rooms.scss
@@ -24,17 +24,25 @@
 }
 ////////////////////////////////////////////////
 
-.rooms{
-  position: relative;
-}
-
-.rooms-header, .room-header{
+.rooms-header{
   height: 50px;
   display: flex;
   align-items: center;
   padding: 0 8px;
   border-bottom: 1px solid #e6e6e6;
   z-index: 1;
+}
+.room-header{
+  display: grid;
+  height: 50px;
+  padding: 0 8px;
+  border-bottom: 1px solid #e6e6e6;
+  z-index: 1;
+}
+.rooms-header__title-wrapper{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 .rooms-header__title, .room-header__title{
   font-weight: 700;
