--- a/app/assets/stylesheets/public/components/rooms.scss
+++ b/app/assets/stylesheets/public/components/rooms.scss
@@ -23,6 +23,15 @@
   }
 }
 ////////////////////////////////////////////////
+.rooms, .room{
+  height: calc(100vh - 88px);
+  height: calc(var(--vh, 1vh) * 100 - 88px);
+  position: relative;
+  @media(max-width: 576px){
+    height: calc(100vh);
+    height: calc(var(--vh, 1vh) * 100);
+  }
+}
 
 .rooms-header{
   height: 50px;
@@ -48,7 +57,7 @@
   font-weight: 700;
 }
 
-.rooms-body{
+.rooms-body, .room-body{
   height: 100%;
   overflow: scroll;
 }
@@ -85,4 +94,27 @@
   height: 40px;
   border-radius: 50%;
   object-fit: cover;
+}
+
+.room-footer{
+  display: flex;
+  flex-direction: column;
+  height: 160px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  border-top: 1px solid #eee;
+  @media(max-width: 576px){
+    height: 100px;
+  }
+}
+
+.room-footer__input{
+  flex: 1 1;
+  padding: 8px;
+  font-size: 16px;
+  width: 100%;
+  resize: none;
+  box-sizing: border-box;
 }
