--- a/app/assets/stylesheets/public/components/messages.scss
+++ b/app/assets/stylesheets/public/components/messages.scss
@@ -29,7 +29,9 @@
   margin: 0 4px 4px;
   border-bottom-left-radius: 0;
 }
-
+.message-footer{
+  display: flex;
+}
 .my-message{
   .message-content, .message-footer{
       justify-content: flex-end;
@@ -43,4 +45,9 @@
       border-bottom-left-radius: 20px;
       border-bottom-right-radius: 0;
   }
+}
+.message-date{
+  color: #999;
+  font-size: 10px;
+  margin-top: 1px;
 }
