--- a/app/assets/stylesheets/public/components/rooms.scss
+++ b/app/assets/stylesheets/public/components/rooms.scss
@@ -105,6 +105,7 @@
   left: 0;
   right: 0;
   border-top: 1px solid #eee;
+  background-color: #fff;
   @media(max-width: 576px){
     height: 100px;
   }
