--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -4,12 +4,24 @@ html {
 
 body{
   height: 100%;
+  min-height: 80vh;
   margin: 0;
-  // font-family: sans-serif;
   background: #fffffe;
   color: #172c66;
   font-family: 'Noto Sans', sans-serif;
   // font-family: -apple-system,BlinkMacSystemFont,\\6E38\30B4\30B7\30C3\30AF\4F53,Yu Gothic,YuGothic,sans-serif;
+}
+
+main{
+  position: relative;
+  background-size: cover;
+  background-position: center;
+}
+
+.container{
+  width: 100%;
+  max-width: 600px;
+  margin: 0 auto;
 }
 
 a {
