--- a/app/assets/stylesheets/public/components/rooms.scss
+++ b/app/assets/stylesheets/public/components/rooms.scss
@@ -42,9 +42,7 @@
   z-index: 1;
 }
 .room-header{
-  display: grid;
-  height: 50px;
-  padding: 0 8px;
+  padding: 8px;
   border-bottom: 1px solid #e6e6e6;
   z-index: 1;
 }
