--- a/app/assets/stylesheets/public/components/rooms.scss
+++ b/app/assets/stylesheets/public/components/rooms.scss
@@ -51,6 +51,9 @@
   align-items: center;
   justify-content: space-between;
 }
+.fa-angle-left{
+  margin-right: 8px;
+}
 .rooms-header__title, .room-header__title{
   font-weight: 700;
   font-size: 14px;
