--- a/app/assets/stylesheets/public/components/messages.scss
+++ b/app/assets/stylesheets/public/components/messages.scss
@@ -28,6 +28,7 @@
   padding: 8px 16px 4px;
   margin: 0 4px 4px;
   border-bottom-left-radius: 0;
+  font-size: 14px;
 }
 .message-footer{
   display: flex;
