--- a/app/assets/stylesheets/public/components/rooms.scss
+++ b/app/assets/stylesheets/public/components/rooms.scss
@@ -41,17 +41,27 @@
   border-bottom: 1px solid #e6e6e6;
   z-index: 1;
 }
-.rooms-header__title-wrapper{
+.rooms-header__title-wrapper, .room-header__title-wrapper{
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
+.room-header__back-btn{
+  cursor: pointer;
+}
 .fa-angle-left{
   margin-right: 8px;
+}
+.room-header__selected-user{
+  display: flex;
+  align-items: center;
 }
 .rooms-header__title, .room-header__title{
   font-weight: 700;
   font-size: 14px;
+}
+.room-header__title{
+  margin-right: 8px;
 }
 
 .rooms-body, .room-body{
