--- a/app/views/shared/_inviting.html.erb
+++ b/app/views/shared/_inviting.html.erb
@@ -52,7 +52,7 @@
 
 <style>
 .invited-member-list{
-  background: #f3d2c1;
+  background: #f9f9f9;
   border-radius: 4px;
   padding: 16px;
   margin-bottom: 36px;
