--- a/app/views/user/attack_groups/index.html.erb
+++ b/app/views/user/attack_groups/index.html.erb
@@ -80,10 +80,10 @@
 .attack_groups__users-item-wrapper{
   display: flex;
   justify-content: space-evenly;
-  border: 1px solid #f3d2c1;
+  border: 1px solid #f9f9f9;
   border-radius: 8px;
   padding: 10px 0px;
-  background: #f3d2c1;
+  background: #f9f9f9;
   overflow-x: scroll;
 }
 
