--- a/app/views/user/post_members/edit.html.erb
+++ b/app/views/user/post_members/edit.html.erb
@@ -53,7 +53,7 @@
 </div>
 <style>
 .post-info-wrapper{
-  background: #f3d2c1;
+  background: #f9f9f9;
   border-radius: 4px;
   padding: 16px;
   margin-bottom: 24px;
