--- a/app/views/shared/top/_invite_status.html.erb
+++ b/app/views/shared/top/_invite_status.html.erb
@@ -1,5 +1,5 @@
 <% if @invited_number == 0 %>
   <span>0件</span>
 <% else %>
-  <%= link_to "#{@invited_number}" %>件
+  <%= link_to "#{@invited_number}件" %>
 <% end %>
