--- a/app/views/user/post_members/edit.html.erb
+++ b/app/views/user/post_members/edit.html.erb
@@ -18,7 +18,7 @@
         </span>
       </div>
       <div class="post-info">
-        <span>人数</span>
+        <span><%= user_sex %>の人数</span>
         <span>
           <%= @post.number %>人
         </span>
