--- a/app/views/user/posts/edit.html.erb
+++ b/app/views/user/posts/edit.html.erb
@@ -24,7 +24,7 @@
               人数
             </label>
           </div>
-          <%= f.select :number, options_for_select((2..10).to_a), {prompt: "選択してください"} %>
+          <%= f.select :number, options_for_select((2..10).to_a, selected: @post.number), {prompt: "選択してください"} %>
         </div>
         <div class="field">
           <div class="label">
