--- a/app/views/user/posts/show.html.erb
+++ b/app/views/user/posts/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="single-page">
-        <h1>相手グループ情報</h1>
+        <h1>グループ情報</h1>
 
         <div style="margin-bottom: 42px;">
           <% @post_members.each do |post_member| %>
